--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "npm run lint:fix"
+    "postinstall": "npm run lint:fix",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "build": {
     "productName": "zerotwo-ui",
@@ -81,6 +82,7 @@
     "cfonts": "^1.1.3",
     "chalk": "^2.1.0",
     "copy-webpack-plugin": "^4.0.1",
+    "coveralls": "^3.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "del": "^3.0.0",
