--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ npm-debug.log
 npm-debug.log.*
 thumbs.db
 !.gitkeep
+/bower_components
+semantic/gulpfile.js
+semantic/src
+semantic/tasks
+semantic/dist/*
