--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ build_script:
 test: off
 
 before_deploy:
-  - git tag "$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)"
+  - git tag "v0.1.$(appveyor_build_version)"
 
 deploy:
   release: zerotwo-v$(appveyor_build_version)
