--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ after_success:
 before_deploy:
 - export RELEASE_FILE=$(ls)
 - echo "deploying to GitHub releases"
-- git tag "$(TRAVIS_TAG)"
+- git tag "$(TRAVIS_ENV)"
 deploy:
   provider: releases
   file_glob: true
