--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zerotwo-ui",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
@@ -26,6 +26,7 @@
   "build": {
     "productName": "zerotwo-ui",
     "appId": "org.simulatedgreg.electron-vue",
+    "publish": "always",
     "directories": {
       "output": "build"
     },
