--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "postinstall": "npm run lint:fix",
+    "release": "npm run build",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "build": {
     "productName": "zerotwo-ui",
     "appId": "org.simulatedgreg.electron-vue",
-    "publish": "onTagOrDraft",
     "directories": {
       "output": "build"
     },
@@ -49,12 +49,15 @@
       ]
     },
     "mac": {
+      "publish": "build",
       "icon": "build/icons/icon.icns"
     },
     "win": {
+      "publish": "build",
       "icon": "build/icons/icon.ico"
     },
     "linux": {
+      "publish": "build",
       "icon": "build/icons"
     }
   },
