--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zerotwo-ui",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
@@ -63,12 +63,14 @@
     "jquery": "^3.3.1",
     "localforage": "^1.6.0",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "semantic-ui": "^2.3.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.4.2",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "xml-js": "^1.6.2"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
