--- a/package.json
+++ b/package.json
@@ -52,7 +52,11 @@
       "icon": "build/icons/icon.icns"
     },
     "win": {
-      "icon": "build/icons/icon.ico"
+      "icon": "build/icons/icon.ico",
+      "publish": {
+        "provider": "github",
+        "url": "https://github.com/NicoAiko/zerotwo/"
+      }
     },
     "linux": {
       "icon": "build/icons"
