--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.4.2",
     "vue-router": "^2.5.3",
+    "vuelidate": "^0.6.2",
     "vuex": "^2.3.1",
     "xml2js": "^0.4.19"
   },
