--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.4.2",
+    "vue-notification": "^1.3.7",
     "vue-router": "^2.5.3",
     "vuelidate": "^0.6.2",
     "vuex": "^2.3.1",
@@ -119,6 +120,8 @@
     "html-webpack-plugin": "^2.30.1",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vue-html-loader": "^1.2.4",
