--- a/package.json
+++ b/package.json
@@ -49,27 +49,19 @@
       ]
     },
     "mac": {
-      "icon": "build/icons/icon.icns",
-      "publish": [
-        "always"
-      ]
+      "icon": "build/icons/icon.icns"
     },
     "win": {
-      "icon": "build/icons/icon.ico",
-      "publish": [
-        "always"
-      ]
+      "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "icon": "build/icons",
-      "publish": [
-        "always"
-      ]
+      "icon": "build/icons"
     }
   },
   "dependencies": {
     "axios": "^0.16.1",
     "bluebird": "^3.5.1",
+    "electron-updater": "^2.21.4",
     "he": "^1.1.1",
     "jquery": "^3.3.1",
     "localforage": "^1.6.0",
@@ -77,9 +69,9 @@
     "moment": "^2.21.0",
     "qs": "^6.5.1",
     "semantic-ui": "^2.3.1",
-    "vue": "^2.3.3",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
-    "vue-i18n": "^7.4.2",
+    "vue-i18n": "^7.6.0",
     "vue-notification": "^1.3.7",
     "vue-router": "^2.5.3",
     "vuelidate": "^0.6.2",
@@ -101,14 +93,14 @@
     "copy-webpack-plugin": "^4.0.1",
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^1.7.5",
-    "electron-builder": "^19.19.1",
-    "electron-debug": "^1.4.0",
-    "electron-devtools-installer": "^2.2.0",
-    "eslint": "^4.4.1",
+    "electron": "^1.8.4",
+    "electron-builder": "^20.8.2",
+    "electron-debug": "^1.5.0",
+    "electron-devtools-installer": "^2.2.3",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
@@ -127,7 +119,7 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2"
