--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ matrix:
     osx_image: xcode8.3
   - os: linux
     env: CC=clang CXX=clang++ npm_config_clang=1
-    compiler:
-      - clang
-      - gcc
+    compiler: clang
 cache:
   directories:
     - "node_modules"
