--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "build": {
-    "productName": "zerotwo-ui",
+    "productName": "ZeroTwo",
     "appId": "org.simulatedgreg.electron-vue",
     "directories": {
       "output": "build"
@@ -55,7 +55,11 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "icon": "build/icons"
+      "icon": "build/icons",
+      "target": [
+        "AppImage",
+        "deb"
+      ]
     }
   },
   "dependencies": {
