Fix artifact path (use backslashes)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ deploy:
   description: ''
   release: ZeroTwo-v0.$(appveyor_build_version)
   artifacts:
-    - "build/*.exe"
+    - path: 'build\*.exe'
   auth_token:
     secure: 7YWkBvHOxRb7TmxwBrOYd2c20Ht86u6aNq9TbZfMeLxcdAqVg2P6V0ZRvPmqyLIs
   on:
