--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,8 @@ deploy:
   release: ZeroTwo-v0.$(appveyor_build_version)
   artifacts:
     - path: 'build\*.exe'
+      name: '*.exe'
+      type: File
   auth_token:
     secure: 7YWkBvHOxRb7TmxwBrOYd2c20Ht86u6aNq9TbZfMeLxcdAqVg2P6V0ZRvPmqyLIs
   on:
