--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,10 +27,7 @@ deploy:
   repository: NicoAiko/zerotwo
   description: ''
   release: ZeroTwo-v0.$(appveyor_build_version)
-  artifacts:
-    - path: "build\\*.exe"
-      name: '*.exe'
-      type: File
+  artifact: build\*.exe
   auth_token:
     secure: 7YWkBvHOxRb7TmxwBrOYd2c20Ht86u6aNq9TbZfMeLxcdAqVg2P6V0ZRvPmqyLIs
   on:
