--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,12 +23,14 @@ test: off
 deploy:
   provider: GitHub
   prerelease: true
+  draft: true
   force_update: true
   repository: NicoAiko/zerotwo
   description: ''
-  release: ZeroTwo-v0.$(appveyor_build_version)
+  release: $(appveyor_repo_tag_name)
   artifact: build\*.exe
   auth_token:
-    secure: 7YWkBvHOxRb7TmxwBrOYd2c20Ht86u6aNq9TbZfMeLxcdAqVg2P6V0ZRvPmqyLIs
+    secure: 2l9QA3INcc7ZP0Ye2bV5n7cNfi7WpRb2AjX1nSV878So7aX/K8+a+kFwqMWtUsLS
   on:
     branch: master
+    appveyor_repo_tag: true
