--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ branches:
 platform:
   - x64
 
+init:
+  - git config --global core.autocrlf input
+
 cache:
   - node_modules
   - '%APPDATA%/npm-cache'
@@ -33,3 +36,4 @@ deploy:
     secure: 2l9QA3INcc7ZP0Ye2bV5n7cNfi7WpRb2AjX1nSV878So7aX/K8+a+kFwqMWtUsLS
   on:
     branch: master
+    appveyor_repo_tag: true
