--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ branches:
 
 platform:
   - x64
+  - x86
 
 init:
   - git config --global core.autocrlf input
@@ -23,15 +24,18 @@ build_script:
 
 test: off
 
+artifacts:
+- path: 'build\*.exe'
+
+skip_non_tags: true
+
 deploy:
   provider: GitHub
   prerelease: true
-  draft: true
   force_update: true
   repository: NicoAiko/zerotwo
   description: ''
   release: $(appveyor_repo_tag_name)
-  artifact: build\*.exe
   auth_token:
     secure: 2l9QA3INcc7ZP0Ye2bV5n7cNfi7WpRb2AjX1nSV878So7aX/K8+a+kFwqMWtUsLS
   on:
