--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,6 @@ branches:
 
 platform:
   - x64
-  - x86
 
 init:
   - git config --global core.autocrlf input
@@ -35,7 +34,8 @@ deploy:
   force_update: true
   repository: NicoAiko/zerotwo
   description: ''
-  release: $(appveyor_repo_tag_name)
+  tag: $(appveyor_repo_tag_name)
+  release: ZeroTwo $(appveyor_repo_tag_name)
   auth_token:
     secure: 2l9QA3INcc7ZP0Ye2bV5n7cNfi7WpRb2AjX1nSV878So7aX/K8+a+kFwqMWtUsLS
   on:
