Add Discord Link and allow master branch(?) for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ deploy:
   name: ZeroTwo $TRAVIS_TAG
   on:
     repo: NicoAiko/zerotwo
+    branch: master
 branches:
   only:
   - "/v\\d+\\.\\d+\\.\\d+\\-?[a-z]*/"
