--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zerotwo-ui",
-  "version": "0.5.0",
+  "productName": "ZeroTwo",
+  "version": "0.5.1",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
