Fix package json and add image to appveyor and remove x64

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ branches:
 
 platform: Any CPU
 
+image: Visual Studio 2017
+
 init:
   - git config --global core.autocrlf input
 
@@ -12,8 +14,9 @@ cache:
   - '%APPDATA%/npm-cache'
   - '%USERPROFILE%/.electron'
 
+
 install:
-  - ps: Install-Product node 8 x64
+  - ps: Install-Product node 8
   - npm install
 
 build_script:
