--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "./dist/electron/main.js",
   "scripts": {
-    "build": "node .electron-vue/build.js && electron-builder --publish never",
+    "build": "node .electron-vue/build.js && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --publish never",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir --publish never",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
@@ -77,6 +77,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bluebird": "^3.5.1",
+    "discord-rpc": "^3.0.0-beta.10",
     "electron-updater": "^2.21.4",
     "he": "^1.1.1",
     "jquery": "^3.3.1",
