--- a/.babelrc
+++ b/.babelrc
@@ -1,27 +1,30 @@
 {
   "comments": false,
   "env": {
+    "test": {
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": 8
+          }
+        }],
+        "stage-0"
+      ],
+      "plugins": ["istanbul"]
+    },
     "main": {
       "presets": [
         ["env", {
-          "targets": { "node": 7 }
+          "targets": {
+            "node": 8
+          }
         }],
         "stage-0"
       ]
     },
     "renderer": {
       "presets": [
-        ["env", {
-          "modules": false
-        }],
-        "stage-0"
-      ]
-    },
-    "web": {
-      "presets": [
-        ["env", {
-          "modules": false
-        }],
+        ["env"],
         "stage-0"
       ]
     }
