--- a/package.json
+++ b/package.json
@@ -9,25 +9,12 @@
     "type": "git",
     "url": "https://github.com/NicoAiko/zerotwo"
   },
-  "main": "./dist/electron/main.js",
-  "scripts": {
-    "build": "node .electron-vue/build.js && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --publish never",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir --publish never",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src",
-    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
-    "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "npm run lint:fix",
-    "release": "build",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+  "bugs": {
+    "url": "https://github.com/NicoAiko/zerotwo/issues"
   },
   "build": {
     "productName": "ZeroTwo",
-    "appId": "org.simulatedgreg.electron-vue",
+    "appId": "org.nicoaiko.zerotwo",
     "directories": {
       "output": "build"
     },
@@ -75,70 +62,95 @@
     }
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "discord-rpc": "^3.0.0-beta.10",
-    "electron-updater": "^2.21.4",
+    "electron-oauth2": "^3.0.0",
     "he": "^1.1.1",
     "jquery": "^3.3.1",
-    "localforage": "^1.6.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "qs": "^6.5.1",
+    "jsonwebtoken": "^8.2.2",
+    "localforage": "^1.7.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
+    "qs": "^6.5.2",
     "semantic-ui": "^2.3.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
-    "vue-i18n": "^7.4.2",
-    "vue-notification": "^1.3.7",
-    "vue-router": "^2.5.3",
-    "vuelidate": "^0.6.2",
-    "vuex": "^2.3.1",
+    "vue-i18n": "^7.7.0",
+    "vue-moment": "^4.0.0-0",
+    "vue-notification": "^1.3.10",
+    "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.7.1",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^1.1.3",
-    "chalk": "^2.1.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "coveralls": "^3.0.0",
-    "cross-env": "^5.0.5",
+    "babel-register": "^6.26.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^1.8.4",
-    "electron-builder": "^20.8.2",
-    "electron-debug": "^1.5.0",
-    "electron-devtools-installer": "^2.2.3",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1",
+    "electron-debug": "^2.0.0",
+    "electron-rebuild": "^1.7.3",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.2.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-import-resolver-webpack": "^0.10.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-vue": "^4.5.0",
+    "file-loader": "^1.1.11",
+    "graphql-import-loader": "^0.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "inject-loader": "^4.0.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.8.3",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "vue-devtools": "^3.1.9",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^15.2.2",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.5.2",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "3.1.4",
+    "webpack-hot-middleware": "^2.22.2"
+  },
+  "main": "./dist/electron/main.js",
+  "scripts": {
+    "build": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --publish never",
+    "build:dir": "npm run pack && electron-builder --dir",
+    "build:linux": "npm run pack && electron-builder --linux",
+    "build:mac": "npm run pack && electron-builder --mac",
+    "build:win": "npm run pack && electron-builder --win",
+    "build:win-app": "npm run pack && electron-builder",
+    "clean": "cross-env BUILD_TARGET=clean node vue-electron/build.js",
+    "dev": "cross-env NODE_ENV=development node vue-electron/dev-runner.js",
+    "lint": "eslint --ext .js,.vue src test",
+    "lint:fix": "eslint --ext .js,.vue --fix src test",
+    "pack": "cross-env NODE_ENV=production npm run pack:main && npm run pack:renderer",
+    "pack:main": "webpack --mode production --hide-modules --config vue-electron/webpack.main.config.js",
+    "pack:renderer": "webpack --mode production --hide-modules --config vue-electron/webpack.renderer.config.js",
+    "postinstall": "electron-builder install-app-deps && npm rebuild node-sass",
+    "rebuild-electron": "./node_modules/.bin/electron-rebuild",
+    "release": "build"
   }
 }
