Use semantic autoInstall Remove VueSlider

--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "vue-moment": "^4.0.0-0",
     "vue-notification": "^1.3.10",
     "vue-router": "^3.0.1",
-    "vue-slider-component": "^2.7.1",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
@@ -137,11 +136,11 @@
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --publish never",
-    "build:dir": "npm run pack && electron-builder --dir",
-    "build:linux": "npm run pack && electron-builder --linux",
-    "build:mac": "npm run pack && electron-builder --mac",
-    "build:win": "npm run pack && electron-builder --win",
-    "build:win-app": "npm run pack && electron-builder",
+    "build:dir": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --dir",
+    "build:linux": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --linux",
+    "build:mac": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --mac",
+    "build:win": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --win",
+    "build:win-app": "npm run pack && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder",
     "clean": "cross-env BUILD_TARGET=clean node vue-electron/build.js",
     "dev": "cross-env NODE_ENV=development node vue-electron/dev-runner.js",
     "lint": "eslint --ext .js,.vue src test",
