--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ node_js:
 install:
 - npm install
 script:
-- travis_wait 30 npm run build
+- npm run build
 deploy:
   skip_cleanup: true
   provider: releases
