--- a/package.json
+++ b/package.json
@@ -135,7 +135,8 @@
   },
   "main": "./dist/electron/main.js",
   "scripts": {
-    "build": "npm run pack && electron-builder --publish never",
+    "build": "node vue-electron/build.js && ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder --publish never",
+    "build:pack": "npm run pack && electron-builder --publish never",
     "build:dir": "npm run pack && electron-builder --dir",
     "build:linux": "npm run pack && electron-builder --linux",
     "build:mac": "npm run pack && electron-builder --mac",
