--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
+    "dotenv": "^6.0.0",
+    "dotenv-webpack": "^1.5.6",
     "electron-oauth2": "^3.0.0",
+    "env-cmd": "^8.0.2",
     "he": "^1.1.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.2",
@@ -144,7 +147,7 @@
     "dev": "cross-env NODE_ENV=development node vue-electron/dev-runner.js",
     "lint": "eslint --ext .js,.vue src test",
     "lint:fix": "eslint --ext .js,.vue --fix src test",
-    "pack": "cross-env NODE_ENV=production npm run pack:main && npm run pack:renderer",
+    "pack": "env-cmd .env npm run pack:main && npm run pack:renderer",
     "pack:main": "webpack --mode production --hide-modules --config vue-electron/webpack.main.config.js",
     "pack:renderer": "webpack --mode production --hide-modules --config vue-electron/webpack.renderer.config.js",
     "rebuild-electron": "./node_modules/.bin/electron-rebuild",
