--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ image: Visual Studio 2017
 
 init:
   - git config --global core.autocrlf input
+  - $env:CLIENT_SECRET > .env
 
 install:
   - ps: Install-Product node 8
