--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,10 +8,10 @@ image: Visual Studio 2017
 
 init:
   - git config --global core.autocrlf input
-  - $env:CLIENT_SECRET > .env
 
 install:
   - ps: Install-Product node 8
+  - ps: echo "CLIENT_SECRET=$env:CLIENT_SECRET" > .env
   - npm install
 
 build_script:
