--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ node_js:
 install:
 - npm install
 script:
-- echo "CLIENT_SECRET=$CLIENT_SECRET" > .env
+- printf "CLIENT_SECRET=$CLIENT_SECRET\nNODE_ENV=production" > .env
 - npm run build
 deploy:
   skip_cleanup: true
