--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,11 @@ platform: Any CPU
 
 image: Visual Studio 2017
 
+environment:
+  NODE_ENV: production
+  CLIENT_SECRET:
+    secure: JMBmvZNgm2X7uTsEe1b7sPKoJHSqowjcHxDZ+/vdzGixlY7ycTrYC1Igf9hKQz8U
+
 init:
   - git config --global core.autocrlf input
 
