aaaaaaaaaaaand it's gone

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,16 +11,20 @@ init:
 
 install:
   - ps: Install-Product node 8
+  - npm install
   - ps: echo "CLIENT_SECRET=$env:CLIENT_SECRET`r`nNODE_ENV=production" > .env
-  - ps: npm install
 
 environment:
-  NODE_ENV: production
+  # NODE_ENV: production
   CLIENT_SECRET:
     secure: JMBmvZNgm2X7uTsEe1b7sPKoJHSqowjcHxDZ+/vdzGixlY7ycTrYC1Igf9hKQz8U
 
+before_build:
+  - ps: echo $env:NODE_ENV
+  - ps: $env:NODE_ENV="production"
+
 build_script:
-  - ps: npm run build
+  - npm run build
 
 test: off
 
