--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "files": [
       "dist/electron/**/*"
     ],
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
     "dmg": {
       "contents": [
         {
@@ -47,9 +51,7 @@
           "arch": [
             "x64",
             "ia32"
-          ],
-          "oneClick": false,
-          "allowToChangeInstallationDirectory": true
+          ]
         }
       ]
     },
