--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerotwo-ui",
   "productName": "ZeroTwo",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
@@ -70,6 +70,7 @@
     "bluebird": "^3.5.1",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.6",
+    "electron-log": "^2.2.16",
     "electron-oauth2": "^3.0.0",
     "env-cmd": "^8.0.2",
     "he": "^1.1.1",
@@ -79,7 +80,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "qs": "^6.5.2",
-    "semantic-ui": "^2.3.1",
+    "update-electron-app": "^1.3.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.7.0",
