--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerotwo-ui",
   "productName": "ZeroTwo",
-  "version": "0.7.0",
+  "version": "0.7.0-20180820b",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
@@ -69,21 +69,21 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "dotenv": "^6.0.0",
-    "dotenv-webpack": "^1.5.6",
+    "dotenv-webpack": "^1.5.7",
     "electron-oauth2": "^3.0.0",
     "env-cmd": "^8.0.2",
     "he": "^1.1.1",
     "jquery": "^3.3.1",
-    "jsonwebtoken": "^8.2.2",
-    "localforage": "^1.7.1",
+    "jsonwebtoken": "^8.3.0",
+    "localforage": "^1.7.2",
     "lodash": "^4.17.10",
-    "moment": "^2.22.1",
+    "moment": "^2.22.2",
     "qs": "^6.5.2",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-electron": "^1.0.6",
-    "vue-i18n": "^7.7.0",
+    "vue-i18n": "^7.8.1",
     "vue-moment": "^4.0.0-0",
-    "vue-notification": "^1.3.10",
+    "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
@@ -92,50 +92,50 @@
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.6",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.2",
-    "electron-builder": "^20.15.1",
+    "electron": "^2.0.7",
+    "electron-builder": "^20.28.1",
     "electron-debug": "^2.0.0",
-    "electron-rebuild": "^1.7.3",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-webpack": "^0.10.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-vue": "^4.5.0",
+    "electron-rebuild": "^1.8.2",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-vue": "^4.7.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
-    "less": "^2.7.3",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "0.4.0",
+    "mini-css-extract-plugin": "0.4.1",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
     "url-loader": "^1.0.1",
-    "vue-devtools": "^3.1.9",
+    "vue-devtools": "^4.1.4",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.2",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "3.1.4",
-    "webpack-hot-middleware": "^2.22.2"
+    "vue-loader": "^15.3.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "3.1.5",
+    "webpack-hot-middleware": "^2.22.3"
   },
   "main": "./dist/electron/main.js",
   "scripts": {
