Rename GraphQL files
Set Up Gitlab CI file
Update ESLint rule set
Add beta version number

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerotwo-ui",
   "productName": "ZeroTwo",
-  "version": "0.7.0-20180820b",
+  "version": "0.7.0-20180825b",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
@@ -148,8 +148,8 @@
     "build:win-app": "npm run pack && electron-builder",
     "clean": "cross-env BUILD_TARGET=clean node vue-electron/build.js",
     "dev": "env-cmd .env cross-env NODE_ENV=development node vue-electron/dev-runner.js",
-    "lint": "eslint --ext .js,.vue src test",
-    "lint:fix": "eslint --ext .js,.vue --fix src test",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --ext .js,.vue --fix src",
     "pack": "env-cmd .env npm run pack:main && npm run pack:renderer",
     "pack:main": "webpack --mode production --hide-modules --config vue-electron/webpack.main.config.js",
     "pack:renderer": "webpack --mode production --hide-modules --config vue-electron/webpack.renderer.config.js",
