--- a/package.json
+++ b/package.json
@@ -104,8 +104,8 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.7",
-    "electron-builder": "^20.28.1",
+    "electron": "^2.0.8",
+    "electron-builder": "^20.28.2",
     "electron-debug": "^2.0.0",
     "electron-rebuild": "^1.8.2",
     "eslint": "^5.4.0",
@@ -120,19 +120,19 @@
     "inject-loader": "^4.0.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
-    "url-loader": "^1.0.1",
+    "url-loader": "^1.1.1",
     "vue-devtools": "^4.1.4",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.3.0",
+    "vue-loader": "^15.4.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.16.5",
+    "webpack": "^4.17.1",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "3.1.5",
     "webpack-hot-middleware": "^2.22.3"
