--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
+    "vuetify": "^1.1.14",
     "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
   },
