--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
-    "vuetify": "^1.1.14",
+    "vuetify": "^1.2.0",
     "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
   },
@@ -115,7 +115,7 @@
     "eslint-loader": "^2.1.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^4.7.1",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
@@ -129,6 +129,7 @@
     "style-loader": "^0.22.1",
     "url-loader": "^1.1.1",
     "vue-devtools": "^4.1.4",
+    "vue-eslint-parser": "^3.2.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.4.0",
     "vue-style-loader": "^4.1.2",
