--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "file-loader": "^1.1.11",
+    "graphql": "^14.0.2",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
     "less": "^3.8.1",
@@ -137,6 +138,7 @@
     "webpack": "^4.17.1",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "3.1.5",
+    "webpack-graphql-loader": "^1.0.0",
     "webpack-hot-middleware": "^2.22.3"
   },
   "main": "./dist/electron/main.js",
