--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerotwo-ui",
   "productName": "ZeroTwo",
-  "version": "0.7.0-20180910b",
+  "version": "0.6.1",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
