--- a/package.json
+++ b/package.json
@@ -67,53 +67,53 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bluebird": "^3.5.1",
-    "dotenv": "^6.0.0",
+    "bluebird": "^3.5.2",
+    "dotenv": "^6.1.0",
     "dotenv-webpack": "^1.5.7",
     "electron-oauth2": "^3.0.0",
     "env-cmd": "^8.0.2",
-    "he": "^1.1.1",
+    "he": "^1.2.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "localforage": "^1.7.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "qs": "^6.5.2",
     "vue": "^2.5.17",
     "vue-electron": "^1.0.6",
-    "vue-i18n": "^7.8.1",
+    "vue-i18n": "~7.8.1",
     "vue-moment": "^4.0.0-0",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
-    "vuetify": "^1.2.6",
+    "vuetify": "^1.2.9",
     "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
-    "babel-plugin-istanbul": "^4.1.6",
+    "babel-plugin-istanbul": "^5.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.5.3",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "~0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^3.0.3",
+    "electron": "^3.0.4",
     "electron-builder": "^20.28.4",
     "electron-debug": "^2.0.0",
     "electron-rebuild": "^1.8.2",
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-html": "^4.0.5",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "file-loader": "^1.1.11",
@@ -122,24 +122,24 @@
     "inject-loader": "^4.0.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.2",
+    "mini-css-extract-plugin": "^0.4.4",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "url-loader": "^1.1.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue-devtools": "^4.1.4",
     "vue-eslint-parser": "^3.2.2",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.4.0",
+    "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "3.1.5",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "3.1.9",
     "webpack-graphql-loader": "^1.0.0",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack-hot-middleware": "^2.24.3"
   },
   "main": "./dist/electron/main.js",
   "scripts": {
