Use "secure" oauth to anilist //FIXME: get it running on electron v3.0.4

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerotwo-ui",
   "productName": "ZeroTwo",
-  "version": "0.7.0-20181004b",
+  "version": "0.7.0-20181014b",
   "author": "NicoAiko <nicochan95.anime@gmail.com>",
   "description": "Taiga alternative",
   "license": "GPL-3.0",
@@ -70,7 +70,6 @@
     "bluebird": "^3.5.2",
     "dotenv": "^6.1.0",
     "dotenv-webpack": "^1.5.7",
-    "electron-oauth2": "^3.0.0",
     "env-cmd": "^8.0.2",
     "he": "^1.2.0",
     "jquery": "^3.3.1",
@@ -79,6 +78,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "qs": "^6.5.2",
+    "request": "^2.88.0",
     "vue": "^2.5.17",
     "vue-electron": "^1.0.6",
     "vue-i18n": "~7.8.1",
