Test other settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,35 @@ language: node_js
 matrix:
   include:
   - os: osx
-    osx_image: xcode8.3
+    osx_image: xcode9.4
+    env:
+      - ELECTRON_CACHE=$HOME/.cache/electron
+      - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
   - os: linux
     env: CC=clang CXX=clang++ npm_config_clang=1
     compiler: clang
+
+cache:
+  directories:
+    - node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
+
 branches:
   only:
     - master
     - /^v\d+\.\d+\.\d+\-?[a-z]*$/
+
 node_js:
 - '10'
+
 install:
-- npm install
+- npm install --force
+
 script:
 - printf "CLIENT_SECRET=$CLIENT_SECRET\nNODE_ENV=production" > .env
 - npm run build
+
 deploy:
   skip_cleanup: false
   provider: releases
