--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ matrix:
   include:
   - os: osx
     osx_image: xcode9.4
+    language: node_js
+    node_js: "10"
     env:
       - ELECTRON_CACHE=$HOME/.cache/electron
       - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
@@ -23,15 +25,30 @@ branches:
     - master
     - /^v\d+\.\d+\.\d+\-?[a-z]*$/
 
-node_js:
-- '10'
+# node_js:
+# - '10'
 
-install:
-- npm install --force
+# install:
+# - npm install --force
 
 script:
-- printf "CLIENT_SECRET=$CLIENT_SECRET\nNODE_ENV=production" > .env
-- npm run build
+  - |
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      docker run --rm \
+        --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+        -v ${PWD}:/zerotwo \
+        -v ~/.cache/electron:/root/.cache/electron \
+        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+        electronuserland/builder:wine \
+        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
+    else
+      yarn release
+    fi
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
+
+# - printf "CLIENT_SECRET=$CLIENT_SECRET\nNODE_ENV=production" > .env
+# - npm run build
 
 deploy:
   skip_cleanup: false
