--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ init:
 
 install:
   - ps: Install-Product node 10
-  - npm install --force
+  - yarn
 
 environment:
   CLIENT_SECRET:
@@ -25,7 +25,7 @@ before_build:
   - ps: echo "CLIENT_SECRET=$env:CLIENT_SECRET`r`nNODE_ENV=production" > .env
 
 build_script:
-  - npm run build
+  - yarn release
 
 test: off
 
