--- a/package.json
+++ b/package.json
@@ -143,18 +143,18 @@
   },
   "main": "./dist/electron/main.js",
   "scripts": {
-    "build": "npm run pack && electron-builder --publish never",
-    "build:pack": "npm run pack && electron-builder --publish never",
-    "build:dir": "npm run pack && electron-builder --dir",
-    "build:linux": "npm run pack && electron-builder --linux",
-    "build:mac": "npm run pack && electron-builder --mac",
-    "build:win": "node vue-electron/build.js && electron-builder --publish never",
-    "build:win-app": "npm run pack && electron-builder",
+    "build": "pack && node_modules/.bin/electron-builder --publish never",
+    "build:pack": "pack && node_modules/.bin/electron-builder --publish never",
+    "build:dir": "pack && node_modules/.bin/electron-builder --dir",
+    "build:linux": "pack && node_modules/.bin/electron-builder --linux",
+    "build:mac": "pack && node_modules/.bin/electron-builder --mac",
+    "build:win": "node vue-electron/build.js && node_modules/.bin/electron-builder --publish never",
+    "build:win-app": "pack && node_modules/.bin/electron-builder",
     "clean": "cross-env BUILD_TARGET=clean node vue-electron/build.js",
     "dev": "env-cmd .env cross-env NODE_ENV=development node vue-electron/dev-runner.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue --fix src",
-    "pack": "env-cmd .env npm run pack:main && npm run pack:renderer",
+    "pack": "pack:main && pack:renderer",
     "pack:main": "webpack --mode production --hide-modules --config vue-electron/webpack.main.config.js",
     "pack:renderer": "webpack --mode production --hide-modules --config vue-electron/webpack.renderer.config.js",
     "rebuild-electron": "./node_modules/.bin/electron-rebuild",
