--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ branches:
     - master
     - /^v\d+\.\d+\.\d+\-?[a-z]*$/
 
-before_install:
-  - yarn global add electron-builder
+before_script:
+  - npm install
 
 script:
   - |
@@ -32,9 +32,9 @@ script:
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
+        /bin/bash -c "npm run build --linux --win"
     else
-      yarn release
+      npm run build
     fi
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
