--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
+    "discord-rpc": "^3.0.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.6.0",
     "env-cmd": "^8.0.2",
