--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "bluebird": "^3.5.3",
     "discord-rpc": "^3.0.1",
     "dotenv": "^6.2.0",
-    "dotenv-webpack": "^1.6.0",
+    "dotenv-webpack": "^1.7.0",
     "env-cmd": "^8.0.2",
     "he": "^1.2.0",
     "jquery": "^3.3.1",
@@ -80,15 +80,15 @@
     "moment": "^2.23.0",
     "qs": "^6.6.0",
     "request": "^2.88.0",
-    "vue": "^2.5.22",
+    "vue": "^2.6.6",
     "vue-electron": "^1.0.6",
     "vue-i18n": "~7.8.1",
     "vue-moment": "^4.0.0",
-    "vue-notification": "^1.3.14",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
-    "vuetify": "^1.4.1",
-    "vuex": "^3.0.1",
+    "vuetify": "^1.5.1",
+    "vuex": "^3.1.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
@@ -106,19 +106,19 @@
     "css-loader": "~0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^4.0.1",
-    "electron-builder": "^20.38.4",
-    "electron-debug": "^2.0.0",
+    "electron": "^4.0.4",
+    "electron-builder": "^20.38.5",
+    "electron-debug": "^2.1.0",
     "electron-rebuild": "^1.8.2",
-    "eslint": "^5.12.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-vue": "^5.1.0",
     "file-loader": "^1.1.11",
-    "graphql": "^14.0.2",
+    "graphql": "^14.1.1",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
     "less": "^3.9.0",
@@ -133,11 +133,11 @@
     "vue-devtools": "^5.0.0-beta.1",
     "vue-eslint-parser": "^4.0.3",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.5.1",
+    "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.22",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
+    "vue-template-compiler": "^2.6.6",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "3.1.14",
     "webpack-graphql-loader": "^1.0.0",
     "webpack-hot-middleware": "^2.24.3"
@@ -149,7 +149,7 @@
     "build:dir": "npm run pack && electron-builder --dir",
     "build:linux": "npm run pack && electron-builder --linux",
     "build:mac": "npm run pack && electron-builder --mac",
-    "build:win": "node vue-electron/build.js && electron-builder --publish never",
+    "build:win": "node vue-electron/build.js && electron-builder --publish never --windows",
     "build:win-app": "npm run pack && electron-builder",
     "clean": "cross-env BUILD_TARGET=clean node vue-electron/build.js",
     "dev": "env-cmd .env cross-env NODE_ENV=development node vue-electron/dev-runner.js",
