--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "zerotwo",
+  "productName": "ZeroTwo",
   "version": "0.6.3b",
-  "private": true,
+  "author": "NicoAiko <nicoaiko@zerotwo.org>",
+  "description": "Taiga alternative",
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NicoAiko/zerotwo"
+  },
+  "bugs": {
+    "url": "https://github.com/NicoAiko/zerotwo/issues"
+  },
   "scripts": {
     "serve": "vue-cli-service electron:serve",
     "build": "vue-cli-service electron:build",
