--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.10.0",
+    "vue-infinite-loading": "^2.4.4",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
     "vuetify": "^1.5.7",
