Add Authentication hint Card to home Add switch for dark and light mode Add store for images to cache TODO: Get it running properly

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@types/lodash": "^4.14.123",
     "@types/request": "^2.48.1",
+    "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.10.0",
