--- a/package.json
+++ b/package.json
@@ -26,36 +26,37 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.10.0",
+    "vue-notification": "^1.3.16",
     "vue-property-decorator": "^7.3.0",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.5.7",
+    "vue-router": "^3.0.6",
+    "vuetify": "^1.5.13",
     "vuex": "^3.1.0",
-    "vuex-class-component": "^1.5.6",
+    "vuex-class-component": "^1.6.0",
     "vuex-persist": "^2.0.0"
   },
   "devDependencies": {
-    "@mdi/font": "^3.5.95",
+    "@mdi/font": "^3.6.95",
     "@types/lodash": "^4.14.123",
     "@types/request": "^2.48.1",
-    "@types/webpack": "^4.4.26",
-    "@vue/cli-plugin-babel": "^3.5.3",
-    "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-plugin-typescript": "^3.5.3",
-    "@vue/cli-service": "^3.5.3",
-    "electron": "^4.1.2",
+    "@types/webpack": "^4.4.27",
+    "@vue/cli-plugin-babel": "^3.6.0",
+    "@vue/cli-plugin-pwa": "^3.6.0",
+    "@vue/cli-plugin-typescript": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
+    "electron": "^4.1.4",
     "fibers": "^3.1.1",
-    "sass": "^1.17.3",
+    "sass": "^1.19.0",
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.3.4000",
+    "typescript": "^3.4.5",
     "typescript-tslint-plugin": "^0.3.1",
     "vue-cli-plugin-electron-builder": "^1.2.0",
     "vue-cli-plugin-i18n": "^0.5.2",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.1"
+    "vuetify-loader": "^1.2.2"
   },
   "main": "background.js"
 }
