Add Media Detection for windows Add Discord RPC for zerotwo Update Dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-i18n": "^8.11.2",
@@ -36,14 +37,15 @@
   },
   "devDependencies": {
     "@mdi/font": "^3.6.95",
-    "@types/lodash": "^4.14.126",
+    "@types/lodash": "^4.14.129",
     "@types/request": "^2.48.1",
+    "@types/uuid": "^3.4.4",
     "@types/webpack": "^4.4.31",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-pwa": "^3.7.0",
     "@vue/cli-plugin-typescript": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
-    "electron": "^4.2.0",
+    "electron": "^4.2.2",
     "fibers": "^3.1.1",
     "husky": "^2.3.0",
     "sass": "^1.20.1",
