--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "register-service-worker": "^1.6.2",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
